fix likes button z-index

--- a/src/sass/likes.scss
+++ b/src/sass/likes.scss
@@ -41,7 +41,6 @@
 		position: relative;
 		display: inline-block;
 		color: var(--fg-color);
-		z-index: 1;
 
 		svg {
 			width: 2.5rem;
